Complete Fase 1 MVP - ImaLink v1.0.0

--- a/fase1/src/static/index_new.html
+++ b/fase1/src/static/index_new.html
@@ -42,7 +42,12 @@
                     Fotografer
                 </a>
             </li>
-
+            <li class="nav-item">
+                <a href="/api/docs" class="nav-link">
+                    <span class="nav-icon">📚</span>
+                    API Docs
+                </a>
+            </li>
         </ul>
     </nav>
 
@@ -75,7 +80,11 @@
                     <p>Administrer fotografer og opphavsrett</p>
                 </a>
 
-
+                <a href="/api/docs" class="card">
+                    <div class="card-icon">📚</div>
+                    <h3>API Dokumentasjon</h3>
+                    <p>Teknisk dokumentasjon for utviklere</p>
+                </a>
             </div>
 
             <!-- Quick Stats -->
