--- a/fase1/src/static/authors.html
+++ b/fase1/src/static/authors.html
@@ -31,6 +31,12 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a href="/selections" class="nav-link">
+                    <span class="nav-icon">📁</span>
+                    Selections
+                </a>
+            </li>
+            <li class="nav-item">
                 <a href="/import" class="nav-link">
                     <span class="nav-icon">📥</span>
                     Import
